quelques petites methodes de get/delete en plus

--- a/CardShop-groupe9/src/main/resources/Inscription.html
+++ b/CardShop-groupe9/src/main/resources/Inscription.html
@@ -19,7 +19,7 @@
             <div align="center">
                 <h2> Inscription </h2>
                 <br />
-                <form method="POST" action="register">
+                <form method="POST" id="register" action="register">
                     <table >
                         <tr>
                             <td align="right">
@@ -43,7 +43,7 @@
                     </table>
 
                     <br />
-                    <input type="submit" name="formu_inscription" value="Valider le formulaire" />
+                    <input type="submit" name="formu_inscription"  href="connexion.html" value="Valider le formulaire" />
                     <br /><br /><br />
                                  
                 </form>
