--- a/CardShop-groupe9/src/main/resources/connexion.html
+++ b/CardShop-groupe9/src/main/resources/connexion.html
@@ -18,7 +18,7 @@
             <div align="center">
                 <h2> Connexion </h2>
                 <br />
-                <form method="POST" action="login">
+                <form method="POST" id="login" action="login">
                     <table >
                         <tr>
                             <td align="right">
